--- a/proje.ipynb
+++ b/proje.ipynb
@@ -2,15 +2,84 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import random\n",
+    "\n",
+    "def singlePointCrossover(firstParent: list, secondParent: list):\n",
+    "\n",
+    "   crossOverPoint = random.randint(1, len(firstParent) - 1)\n",
+    "   print(crossOverPoint)\n",
+    "   crossOverPart1 = firstParent[crossOverPoint: len(firstParent)]\n",
+    "   crossOverPart2 = secondParent[crossOverPoint: len(secondParent)]\n",
+    "\n",
+    "   print(crossOverPart1)\n",
+    "   print(crossOverPart2)\n",
+    "\n",
+    "   firstOffSpring = firstParent\n",
+    "   secondOffSpring = secondParent\n",
+    "\n",
+    "   firstOffSpring[crossOverPoint: len(firstParent)] = crossOverPart2\n",
+    "   secondOffSpring[crossOverPoint: len(secondParent)] = crossOverPart1\n",
+    "\n",
+    "   print(firstOffSpring)\n",
+    "   print(secondOffSpring)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "can only concatenate str (not \"list\") to str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[58], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m firstParent \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m0\u001b[39m , \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m]\n\u001b[0;32m      2\u001b[0m secondParent \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m]\n\u001b[1;32m----> 4\u001b[0m \u001b[43msinglePointCrossover\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfirstParent\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msecondParent\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[57], line 10\u001b[0m, in \u001b[0;36msinglePointCrossover\u001b[1;34m(firstParent, secondParent)\u001b[0m\n\u001b[0;32m      7\u001b[0m crossOverPart1 \u001b[38;5;241m=\u001b[39m firstParent[crossOverPoint: \u001b[38;5;28mlen\u001b[39m(firstParent)]\n\u001b[0;32m      8\u001b[0m crossOverPart2 \u001b[38;5;241m=\u001b[39m secondParent[crossOverPoint: \u001b[38;5;28mlen\u001b[39m(secondParent)]\n\u001b[1;32m---> 10\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mFirst Part: \u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mcrossOverPart1\u001b[49m)\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28mprint\u001b[39m(crossOverPart2)\n\u001b[0;32m     13\u001b[0m firstOffSpring \u001b[38;5;241m=\u001b[39m firstParent\n",
+      "\u001b[1;31mTypeError\u001b[0m: can only concatenate str (not \"list\") to str"
+     ]
+    }
+   ],
+   "source": [
+    "firstParent = [0, 0 , 1, 1, 0, 1]\n",
+    "secondParent = [1, 1, 0, 0, 0, 1]\n",
+    "\n",
+    "singlePointCrossover(firstParent, secondParent)"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.7"
   }
  },
  "nbformat": 4,
