--- a/proje.ipynb
+++ b/proje.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,18 +32,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n",
-      "[1]\n",
-      "[1]\n",
-      "[0, 0, 1, 1, 0, 1]\n",
-      "[1, 1, 0, 0, 0, 1]\n"
+      "1\n",
+      "[0, 1, 1, 0, 1]\n",
+      "[1, 0, 0, 0, 1]\n",
+      "[0, 1, 0, 0, 0, 1]\n",
+      "[1, 0, 1, 1, 0, 1]\n"
      ]
     }
    ],
@@ -52,6 +52,68 @@
     "secondParent = [1, 1, 0, 0, 0, 1]\n",
     "\n",
     "singlePointCrossover(firstParent, secondParent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def multiplePointCrossover(firstParent: list, secondParent: list):\n",
+    "    firstCrossOverPoint = random.randint(1, len(firstParent) - 1)\n",
+    "    secondCrossOverPoint = random.randint(1, len(secondParent) - 1)\n",
+    "\n",
+    "    while (firstCrossOverPoint == secondCrossOverPoint):\n",
+    "        secondCrossOverPoint = random.randint(1, len(firstParent) - 1)\n",
+    "    \n",
+    "    if (firstCrossOverPoint > secondCrossOverPoint):\n",
+    "        firstCrossOverPoint, secondCrossOverPoint = secondCrossOverPoint, firstCrossOverPoint\n",
+    "    \n",
+    "    print(firstCrossOverPoint)\n",
+    "    print(secondCrossOverPoint)\n",
+    "\n",
+    "    crossOverPart1 = firstParent[firstCrossOverPoint: secondCrossOverPoint + 1]\n",
+    "    crossOverPart2 = secondParent[firstCrossOverPoint: secondCrossOverPoint + 1]\n",
+    "\n",
+    "    print(crossOverPart1)\n",
+    "    print(crossOverPart2)\n",
+    "\n",
+    "    firstOffSpring = firstParent\n",
+    "    secondOffSpring = secondParent\n",
+    "\n",
+    "    firstOffSpring[firstCrossOverPoint: secondCrossOverPoint + 1] = crossOverPart2\n",
+    "    secondOffSpring[firstCrossOverPoint: secondCrossOverPoint + 1] = crossOverPart1\n",
+    "\n",
+    "    print(firstOffSpring)\n",
+    "    print(secondOffSpring)\n",
+    "\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "4\n",
+      "[0, 1, 1, 0]\n",
+      "[1, 0, 0, 0]\n",
+      "[0, 1, 0, 0, 0, 1]\n",
+      "[1, 0, 1, 1, 0, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "firstParent = [0, 0 , 1, 1, 0, 1]\n",
+    "secondParent = [1, 1, 0, 0, 0, 1]\n",
+    "\n",
+    "multiplePointCrossover(firstParent, secondParent)"
    ]
   }
  ],
