--- a/proje.ipynb
+++ b/proje.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,18 +32,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "[0, 1, 1, 0, 1]\n",
-      "[1, 0, 0, 0, 1]\n",
-      "[0, 1, 0, 0, 0, 1]\n",
-      "[1, 0, 1, 1, 0, 1]\n"
+      "2\n",
+      "[1, 1, 0, 1]\n",
+      "[0, 0, 0, 1]\n",
+      "[0, 0, 0, 0, 0, 1]\n",
+      "[1, 1, 1, 1, 0, 1]\n"
      ]
     }
    ],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -101,9 +101,9 @@
      "output_type": "stream",
      "text": [
       "1\n",
-      "4\n",
-      "[0, 1, 1, 0]\n",
-      "[1, 0, 0, 0]\n",
+      "3\n",
+      "[0, 1, 1]\n",
+      "[1, 0, 0]\n",
       "[0, 1, 0, 0, 0, 1]\n",
       "[1, 0, 1, 1, 0, 1]\n"
      ]
@@ -114,6 +114,330 @@
     "secondParent = [1, 1, 0, 0, 0, 1]\n",
     "\n",
     "multiplePointCrossover(firstParent, secondParent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_excel(\"MyFoodData.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Food Group</th>\n",
+       "      <th>Calories</th>\n",
+       "      <th>Fat (g)</th>\n",
+       "      <th>Protein (g)</th>\n",
+       "      <th>Carbohydrate (g)</th>\n",
+       "      <th>Sugars (g)</th>\n",
+       "      <th>Fiber (g)</th>\n",
+       "      <th>Cholesterol (mg)</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Serving Description 5 (g)</th>\n",
+       "      <th>Serving Weight 6 (g)</th>\n",
+       "      <th>Serving Description 6 (g)</th>\n",
+       "      <th>Serving Weight 7 (g)</th>\n",
+       "      <th>Serving Description 7 (g)</th>\n",
+       "      <th>Serving Weight 8 (g)</th>\n",
+       "      <th>Serving Description 8 (g)</th>\n",
+       "      <th>Serving Weight 9 (g)</th>\n",
+       "      <th>Serving Description 9 (g)</th>\n",
+       "      <th>200 Calorie Weight (g)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>167512</td>\n",
+       "      <td>Pillsbury Golden Layer Buttermilk Biscuits Art...</td>\n",
+       "      <td>Baked Foods</td>\n",
+       "      <td>307.0</td>\n",
+       "      <td>13.24</td>\n",
+       "      <td>5.88</td>\n",
+       "      <td>41.18</td>\n",
+       "      <td>5.88</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>65.147</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>167513</td>\n",
+       "      <td>Pillsbury Cinnamon Rolls With Icing Refrigerat...</td>\n",
+       "      <td>Baked Foods</td>\n",
+       "      <td>330.0</td>\n",
+       "      <td>11.27</td>\n",
+       "      <td>4.34</td>\n",
+       "      <td>53.42</td>\n",
+       "      <td>21.34</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>60.606</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>167514</td>\n",
+       "      <td>Kraft Foods Shake N Bake Original Recipe Coati...</td>\n",
+       "      <td>Baked Foods</td>\n",
+       "      <td>377.0</td>\n",
+       "      <td>3.70</td>\n",
+       "      <td>6.10</td>\n",
+       "      <td>79.80</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>53.050</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>167515</td>\n",
+       "      <td>George Weston Bakeries Thomas English Muffins</td>\n",
+       "      <td>Baked Foods</td>\n",
+       "      <td>232.0</td>\n",
+       "      <td>1.80</td>\n",
+       "      <td>8.00</td>\n",
+       "      <td>46.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>86.207</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>167516</td>\n",
+       "      <td>Waffles Buttermilk Frozen Ready-To-Heat</td>\n",
+       "      <td>Baked Foods</td>\n",
+       "      <td>273.0</td>\n",
+       "      <td>9.22</td>\n",
+       "      <td>6.58</td>\n",
+       "      <td>41.05</td>\n",
+       "      <td>4.30</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>73.260</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 117 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       ID                                               Name   Food Group  \\\n",
+       "0  167512  Pillsbury Golden Layer Buttermilk Biscuits Art...  Baked Foods   \n",
+       "1  167513  Pillsbury Cinnamon Rolls With Icing Refrigerat...  Baked Foods   \n",
+       "2  167514  Kraft Foods Shake N Bake Original Recipe Coati...  Baked Foods   \n",
+       "3  167515      George Weston Bakeries Thomas English Muffins  Baked Foods   \n",
+       "4  167516            Waffles Buttermilk Frozen Ready-To-Heat  Baked Foods   \n",
+       "\n",
+       "   Calories  Fat (g)  Protein (g)  Carbohydrate (g)  Sugars (g)  Fiber (g)  \\\n",
+       "0     307.0    13.24         5.88             41.18        5.88        1.2   \n",
+       "1     330.0    11.27         4.34             53.42       21.34        1.4   \n",
+       "2     377.0     3.70         6.10             79.80         NaN        NaN   \n",
+       "3     232.0     1.80         8.00             46.00         NaN        NaN   \n",
+       "4     273.0     9.22         6.58             41.05        4.30        2.2   \n",
+       "\n",
+       "   Cholesterol (mg)  ...  Serving Description 5 (g)  Serving Weight 6 (g)  \\\n",
+       "0               0.0  ...                        NaN                   NaN   \n",
+       "1               0.0  ...                        NaN                   NaN   \n",
+       "2               NaN  ...                        NaN                   NaN   \n",
+       "3               NaN  ...                        NaN                   NaN   \n",
+       "4              15.0  ...                        NaN                   NaN   \n",
+       "\n",
+       "   Serving Description 6 (g)  Serving Weight 7 (g)  Serving Description 7 (g)  \\\n",
+       "0                        NaN                   NaN                        NaN   \n",
+       "1                        NaN                   NaN                        NaN   \n",
+       "2                        NaN                   NaN                        NaN   \n",
+       "3                        NaN                   NaN                        NaN   \n",
+       "4                        NaN                   NaN                        NaN   \n",
+       "\n",
+       "   Serving Weight 8 (g)  Serving Description 8 (g)  Serving Weight 9 (g)  \\\n",
+       "0                   NaN                        NaN                   NaN   \n",
+       "1                   NaN                        NaN                   NaN   \n",
+       "2                   NaN                        NaN                   NaN   \n",
+       "3                   NaN                        NaN                   NaN   \n",
+       "4                   NaN                        NaN                   NaN   \n",
+       "\n",
+       "   Serving Description 9 (g)  200 Calorie Weight (g)  \n",
+       "0                        NaN                  65.147  \n",
+       "1                        NaN                  60.606  \n",
+       "2                        NaN                  53.050  \n",
+       "3                        NaN                  86.207  \n",
+       "4                        NaN                  73.260  \n",
+       "\n",
+       "[5 rows x 117 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Calories</th>\n",
+       "      <th>Protein (g)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Pillsbury Golden Layer Buttermilk Biscuits Art...</td>\n",
+       "      <td>307.0</td>\n",
+       "      <td>5.88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Pillsbury Cinnamon Rolls With Icing Refrigerat...</td>\n",
+       "      <td>330.0</td>\n",
+       "      <td>4.34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Kraft Foods Shake N Bake Original Recipe Coati...</td>\n",
+       "      <td>377.0</td>\n",
+       "      <td>6.10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>George Weston Bakeries Thomas English Muffins</td>\n",
+       "      <td>232.0</td>\n",
+       "      <td>8.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Waffles Buttermilk Frozen Ready-To-Heat</td>\n",
+       "      <td>273.0</td>\n",
+       "      <td>6.58</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                Name  Calories  Protein (g)\n",
+       "0  Pillsbury Golden Layer Buttermilk Biscuits Art...     307.0         5.88\n",
+       "1  Pillsbury Cinnamon Rolls With Icing Refrigerat...     330.0         4.34\n",
+       "2  Kraft Foods Shake N Bake Original Recipe Coati...     377.0         6.10\n",
+       "3      George Weston Bakeries Thomas English Muffins     232.0         8.00\n",
+       "4            Waffles Buttermilk Frozen Ready-To-Heat     273.0         6.58"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = df.filter(items = [\"Name\", \"Calories\", \"Protein (g)\"])\n",
+    "df.head()"
    ]
   }
  ],
