initialize function implemented

--- a/proje.ipynb
+++ b/proje.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,18 +32,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n",
-      "[1, 1, 0, 1]\n",
-      "[0, 0, 0, 1]\n",
-      "[0, 0, 0, 0, 0, 1]\n",
-      "[1, 1, 1, 1, 0, 1]\n"
+      "3\n",
+      "[1, 0, 1]\n",
+      "[0, 0, 1]\n",
+      "[0, 0, 1, 0, 0, 1]\n",
+      "[1, 1, 0, 1, 0, 1]\n"
      ]
     }
    ],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,19 +93,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "3\n",
-      "[0, 1, 1]\n",
-      "[1, 0, 0]\n",
-      "[0, 1, 0, 0, 0, 1]\n",
-      "[1, 0, 1, 1, 0, 1]\n"
+      "2\n",
+      "5\n",
+      "[1, 1, 0, 1]\n",
+      "[0, 0, 0, 1]\n",
+      "[0, 0, 0, 0, 0, 1]\n",
+      "[1, 1, 1, 1, 0, 1]\n"
      ]
     }
    ],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
        "[5 rows x 117 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
        "4            Waffles Buttermilk Frozen Ready-To-Heat     273.0         6.58"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,6 +438,42 @@
    "source": [
     "df = df.filter(items = [\"Name\", \"Calories\", \"Protein (g)\"])\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random \n",
+    "\n",
+    "def initializePopulation(populationSize: int, chromosomeSize: int):\n",
+    "    population = []\n",
+    "\n",
+    "    for i in range(populationSize):\n",
+    "        member = [random.randint(0, 1) for i in range(chromosomeSize)]\n",
+    "        population.append(member)\n",
+    "       \n",
+    "    return population"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 0, 1, 0, 0, 1, 1, 0, 1, 0], [0, 1, 1, 0, 1, 1, 0, 0, 1, 0], [1, 1, 0, 0, 1, 1, 0, 0, 1, 0], [1, 0, 0, 0, 0, 1, 1, 1, 0, 1], [0, 0, 0, 1, 1, 0, 1, 1, 1, 0], [1, 1, 1, 0, 1, 0, 1, 1, 0, 1], [0, 1, 1, 1, 1, 0, 1, 1, 0, 1], [1, 0, 1, 1, 1, 1, 0, 1, 1, 0], [0, 0, 1, 0, 1, 0, 0, 1, 0, 0], [1, 0, 0, 1, 1, 0, 1, 1, 1, 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "population = initializePopulation(10, 10)\n",
+    "print(population)"
    ]
   }
  ],
