fitness function implemented

--- a/proje.ipynb
+++ b/proje.ipynb
@@ -475,6 +475,52 @@
     "population = initializePopulation(10, 10)\n",
     "print(population)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculateFitness(chromosome: list, maxWeight: int):\n",
+    "    totalValue = 0\n",
+    "    totalWeight = 0\n",
+    "\n",
+    "    for i in range(len(chromosome)):\n",
+    "        if chromosome[i]:\n",
+    "            value = df.iloc[i]['Protein (g)']\n",
+    "            totalValue += value\n",
+    "            \n",
+    "            weight = df.iloc[i]['Calories']\n",
+    "            totalWeight += weight\n",
+    "    \n",
+    "    penalty = 0.5\n",
+    "    fitness = totalValue - (totalWeight - maxWeight) * penalty\n",
+    "\n",
+    "    print(totalValue)\n",
+    "    print(totalWeight)\n",
+    "    print(fitness)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.219999999999999\n",
+      "637.0\n",
+      "11.219999999999999\n"
+     ]
+    }
+   ],
+   "source": [
+    "calculateFitness([1, 1], 639)"
+   ]
   }
  ],
  "metadata": {
