print added for debug

--- a/proje.ipynb
+++ b/proje.ipynb
@@ -2,16 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "\n",
     "df = pd.read_excel(\"MyFoodData.xlsx\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +86,7 @@
        "4            Waffles Buttermilk Frozen Ready-To-Heat     273.0         6.58"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,18 +151,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n",
-      "[1]\n",
-      "[1]\n",
-      "[0, 0, 1, 1, 0, 1]\n",
-      "[1, 1, 0, 0, 0, 1]\n"
+      "3\n",
+      "[1, 0, 1]\n",
+      "[0, 0, 1]\n",
+      "[0, 0, 1, 0, 0, 1]\n",
+      "[1, 1, 0, 1, 0, 1]\n"
      ]
     }
    ],
@@ -173,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,19 +212,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n",
-      "4\n",
+      "1\n",
+      "2\n",
+      "[0, 1]\n",
       "[1, 0]\n",
-      "[0, 0]\n",
-      "[0, 0, 1, 0, 0, 1]\n",
-      "[1, 1, 0, 1, 0, 1]\n"
+      "[0, 1, 0, 1, 0, 1]\n",
+      "[1, 0, 1, 0, 0, 1]\n"
      ]
     }
    ],
@@ -235,16 +237,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "def uniformCrossover(firstParent: list, secondParent: list, maxWeight: int):\n",
     "    firstFitness = calculateFitness(firstParent, maxWeight)\n",
     "    secondFitness = calculateFitness(secondParent, maxWeight)\n",
+    "    print(firstFitness, secondFitness)\n",
     "\n",
     "    probability = firstFitness / (firstFitness + secondFitness)\n",
-    "    \n",
+    "    print(probability)\n",
+    "\n",
     "    firstOffSpring = []\n",
     "    secondOffSpring = []\n",
     "    i = 0\n",
@@ -266,15 +270,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 1, 0, 1, 0, 1]\n",
-      "[0, 0, 1, 0, 0, 1]\n"
+      "62.519999999999996 44.64\n",
+      "0.5834266517357223\n",
+      "[0, 1, 0, 0, 0, 1]\n",
+      "[1, 0, 1, 1, 0, 1]\n"
      ]
     }
    ],
@@ -282,12 +288,12 @@
     "firstParent = [0, 0 , 1, 1, 0, 1]\n",
     "secondParent = [1, 1, 0, 0, 0, 1]\n",
     "\n",
-    "uniformCrossover(firstParent, secondParent, 500)"
+    "uniformCrossover(firstParent, secondParent, 1000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,39 +311,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0, 0, 1, 0, 0, 1, 1, 0, 1, 0], [0, 1, 1, 0, 1, 1, 0, 0, 1, 0], [1, 1, 0, 0, 1, 1, 0, 0, 1, 0], [1, 0, 0, 0, 0, 1, 1, 1, 0, 1], [0, 0, 0, 1, 1, 0, 1, 1, 1, 0], [1, 1, 1, 0, 1, 0, 1, 1, 0, 1], [0, 1, 1, 1, 1, 0, 1, 1, 0, 1], [1, 0, 1, 1, 1, 1, 0, 1, 1, 0], [0, 0, 1, 0, 1, 0, 0, 1, 0, 0], [1, 0, 0, 1, 1, 0, 1, 1, 1, 0]]\n"
+      "[[1, 1, 0, 0, 0, 1, 0, 1, 0, 0], [1, 0, 0, 0, 0, 1, 1, 1, 0, 1], [1, 0, 1, 0, 0, 1, 0, 1, 0, 0], [0, 1, 1, 1, 1, 0, 0, 0, 1, 0], [0, 1, 1, 1, 0, 0, 0, 0, 1, 1], [1, 0, 0, 0, 0, 1, 0, 1, 0, 0], [0, 0, 0, 0, 0, 1, 1, 0, 0, 0], [0, 0, 0, 0, 0, 1, 1, 0, 0, 1], [0, 0, 1, 0, 0, 0, 1, 0, 1, 1], [0, 0, 1, 1, 1, 0, 0, 0, 1, 0]]\n"
      ]
     }
    ],
    "source": [
     "population = initializePopulation(10, 10)\n",
     "print(population)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10.219999999999999\n",
-      "637.0\n",
-      "11.219999999999999\n"
-     ]
-    }
-   ],
-   "source": [
-    "calculateFitness([1, 1], 639)"
    ]
   }
  ],
