--- a/proje.ipynb
+++ b/proje.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
        "4            Waffles Buttermilk Frozen Ready-To-Heat     273.0         6.58"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,13 +117,13 @@
     "    penalty = 0.5\n",
     "    fitness = totalValue - (totalWeight - maxWeight) * penalty\n",
     "\n",
-    "    return fitness\n",
+    "    return max(0, fitness)\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,18 +151,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n",
-      "[1, 0, 1]\n",
-      "[0, 0, 1]\n",
-      "[0, 0, 1, 0, 0, 1]\n",
-      "[1, 1, 0, 1, 0, 1]\n"
+      "5\n",
+      "[1]\n",
+      "[1]\n",
+      "[0, 0, 1, 1, 0, 1]\n",
+      "[1, 1, 0, 0, 0, 1]\n"
      ]
     }
    ],
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -220,11 +220,11 @@
      "output_type": "stream",
      "text": [
       "1\n",
-      "2\n",
-      "[0, 1]\n",
-      "[1, 0]\n",
-      "[0, 1, 0, 1, 0, 1]\n",
-      "[1, 0, 1, 0, 0, 1]\n"
+      "3\n",
+      "[0, 1, 1]\n",
+      "[1, 0, 0]\n",
+      "[0, 1, 0, 0, 0, 1]\n",
+      "[1, 0, 1, 1, 0, 1]\n"
      ]
     }
    ],
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -279,8 +279,8 @@
      "text": [
       "62.519999999999996 44.64\n",
       "0.5834266517357223\n",
-      "[0, 1, 0, 0, 0, 1]\n",
-      "[1, 0, 1, 1, 0, 1]\n"
+      "[1, 1, 0, 0, 0, 1]\n",
+      "[0, 0, 1, 1, 0, 1]\n"
      ]
     }
    ],
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,14 +311,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1, 1, 0, 0, 0, 1, 0, 1, 0, 0], [1, 0, 0, 0, 0, 1, 1, 1, 0, 1], [1, 0, 1, 0, 0, 1, 0, 1, 0, 0], [0, 1, 1, 1, 1, 0, 0, 0, 1, 0], [0, 1, 1, 1, 0, 0, 0, 0, 1, 1], [1, 0, 0, 0, 0, 1, 0, 1, 0, 0], [0, 0, 0, 0, 0, 1, 1, 0, 0, 0], [0, 0, 0, 0, 0, 1, 1, 0, 0, 1], [0, 0, 1, 0, 0, 0, 1, 0, 1, 1], [0, 0, 1, 1, 1, 0, 0, 0, 1, 0]]\n"
+      "[[1, 1, 0, 1, 0, 0, 0, 1, 1, 1], [1, 0, 1, 0, 0, 0, 1, 0, 1, 1], [1, 0, 1, 1, 0, 1, 1, 1, 1, 1], [0, 1, 1, 0, 0, 0, 1, 0, 1, 0], [0, 0, 1, 1, 1, 0, 1, 1, 1, 1], [1, 1, 0, 1, 0, 1, 1, 1, 1, 0], [1, 0, 0, 0, 1, 0, 1, 0, 0, 1], [1, 0, 0, 1, 1, 1, 0, 1, 1, 0], [0, 1, 0, 0, 0, 0, 1, 0, 0, 0], [1, 1, 0, 1, 0, 0, 1, 0, 1, 0]]\n"
      ]
     }
    ],
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -346,10 +346,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def rouletteWheelSelection(population: list[list], maxWeight: int):\n",
+    "    total_fitness = 0\n",
+    "    fitnesses = []\n",
+    "\n",
+    "    for i in population:\n",
+    "        fitness = calculateFitness(i, maxWeight)\n",
+    "        fitnesses.append(fitness)\n",
+    "        total_fitness += fitness\n",
+    "\n",
+    "    prob_sum = 0\n",
+    "    roulette = random.uniform(0, total_fitness)\n",
+    "    for i in range(len(population)):\n",
+    "        prob_sum += fitnesses[i]\n",
+    "        if prob_sum > roulette:\n",
+    "            return population[i]\n",
+    "\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 1, 1, 1] 521.4\n",
+      "[0, 1, 0, 1, 1] 851.42\n",
+      "[1, 1, 0, 1, 0] 833.72\n",
+      "[1, 0, 0, 0, 1] 972.46\n",
+      "[1, 0, 1, 0, 1] 790.06\n",
+      "[1, 0, 0, 0, 0] 1102.38\n",
+      "[0, 0, 0, 0, 1] 1120.08\n",
+      "[1, 1, 1, 1, 1] 521.4\n",
+      "[0, 0, 1, 0, 1] 937.68\n",
+      "[1, 0, 1, 1, 1] 682.06\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 0, 1, 1]"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "population = initializePopulation(10, 5)\n",
+    "for i in range(len((population))):\n",
+    "    print(population[i], calculateFitness(population[i], 2500))\n",
+    "\n",
+    "print()\n",
+    "rouletteWheelSelection(population, 2500)"
+   ]
   }
  ],
  "metadata": {
@@ -368,7 +428,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.10.7"
   }
  },
  "nbformat": 4,
