Crossover functions changed, comments added

--- a/proje.ipynb
+++ b/proje.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
+    "# Read data\n",
     "df = pd.read_excel(\"MyFoodData.xlsx\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -86,19 +87,20 @@
        "4            Waffles Buttermilk Frozen Ready-To-Heat     273.0         6.58"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Drops unrelevant columns\n",
     "df = df.filter(items = [\"Name\", \"Calories\", \"Protein (g)\"])\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,6 +117,7 @@
     "            totalWeight += weight\n",
     "    \n",
     "    penalty = 0.5\n",
+    "    # Fitness = Total Proteins - (Total Calories - Max Calorie Given as Input) * Penalty Value\n",
     "    fitness = totalValue - (totalWeight - maxWeight) * penalty\n",
     "\n",
     "    return max(0, fitness)\n",
@@ -123,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,38 +134,33 @@
     "\n",
     "def singlePointCrossover(firstParent: list, secondParent: list):\n",
     "\n",
+    "   # Selects a random crossover point\n",
     "   crossOverPoint = random.randint(1, len(firstParent) - 1)\n",
-    "   print(crossOverPoint)\n",
+    "\n",
+    "   # Selects the crossover parts from parents (From random point to end of the chromosome)\n",
     "   crossOverPart1 = firstParent[crossOverPoint: len(firstParent)]\n",
     "   crossOverPart2 = secondParent[crossOverPoint: len(secondParent)]\n",
     "\n",
-    "   print(crossOverPart1)\n",
-    "   print(crossOverPart2)\n",
+    "   firstOffspring = firstParent\n",
+    "   secondOffspring = secondParent\n",
     "\n",
-    "   firstOffSpring = firstParent\n",
-    "   secondOffSpring = secondParent\n",
+    "   # Swaps the crossover parts between parents\n",
+    "   firstOffspring[crossOverPoint: len(firstParent)] = crossOverPart2\n",
+    "   secondOffspring[crossOverPoint: len(secondParent)] = crossOverPart1\n",
     "\n",
-    "   firstOffSpring[crossOverPoint: len(firstParent)] = crossOverPart2\n",
-    "   secondOffSpring[crossOverPoint: len(secondParent)] = crossOverPart1\n",
-    "\n",
-    "   print(firstOffSpring)\n",
-    "   print(secondOffSpring)"
+    "   return [firstOffspring, secondOffspring]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n",
-      "[1]\n",
-      "[1]\n",
-      "[0, 0, 1, 1, 0, 1]\n",
-      "[1, 1, 0, 0, 0, 1]\n"
+      "[[0, 1, 0, 0, 0, 1], [1, 0, 1, 1, 0, 1]]\n"
      ]
     }
    ],
@@ -170,61 +168,55 @@
     "firstParent = [0, 0 , 1, 1, 0, 1]\n",
     "secondParent = [1, 1, 0, 0, 0, 1]\n",
     "\n",
-    "singlePointCrossover(firstParent, secondParent)"
+    "offsprings = singlePointCrossover(firstParent, secondParent)\n",
+    "print(offsprings)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def multiplePointCrossover(firstParent: list, secondParent: list):\n",
+    "    # Selects two random crossover points\n",
     "    firstCrossOverPoint = random.randint(1, len(firstParent) - 1)\n",
     "    secondCrossOverPoint = random.randint(1, len(secondParent) - 1)\n",
     "\n",
+    "    # Change the crossover point if the points are same\n",
     "    while (firstCrossOverPoint == secondCrossOverPoint):\n",
     "        secondCrossOverPoint = random.randint(1, len(firstParent) - 1)\n",
     "    \n",
+    "    # If the first crossover point is at the right of the second crossover point swap the points\n",
     "    if (firstCrossOverPoint > secondCrossOverPoint):\n",
     "        firstCrossOverPoint, secondCrossOverPoint = secondCrossOverPoint, firstCrossOverPoint\n",
     "    \n",
-    "    print(firstCrossOverPoint)\n",
-    "    print(secondCrossOverPoint)\n",
-    "\n",
+    "    # Select the crossover parts from point1 to point2\n",
     "    crossOverPart1 = firstParent[firstCrossOverPoint: secondCrossOverPoint + 1]\n",
     "    crossOverPart2 = secondParent[firstCrossOverPoint: secondCrossOverPoint + 1]\n",
     "\n",
-    "    print(crossOverPart1)\n",
-    "    print(crossOverPart2)\n",
+    "    firstOffspring = firstParent\n",
+    "    secondOffspring = secondParent\n",
     "\n",
-    "    firstOffSpring = firstParent\n",
-    "    secondOffSpring = secondParent\n",
+    "    # Swap the crossover parts between parents\n",
+    "    firstOffspring[firstCrossOverPoint: secondCrossOverPoint + 1] = crossOverPart2\n",
+    "    secondOffspring[firstCrossOverPoint: secondCrossOverPoint + 1] = crossOverPart1\n",
     "\n",
-    "    firstOffSpring[firstCrossOverPoint: secondCrossOverPoint + 1] = crossOverPart2\n",
-    "    secondOffSpring[firstCrossOverPoint: secondCrossOverPoint + 1] = crossOverPart1\n",
-    "\n",
-    "    print(firstOffSpring)\n",
-    "    print(secondOffSpring)\n",
+    "    return [firstOffspring, secondOffspring]\n",
     "\n",
     "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "3\n",
-      "[0, 1, 1]\n",
-      "[1, 0, 0]\n",
-      "[0, 1, 0, 0, 0, 1]\n",
-      "[1, 0, 1, 1, 0, 1]\n"
+      "[[0, 0, 0, 0, 0, 1], [1, 1, 1, 1, 0, 1]]\n"
      ]
     }
    ],
@@ -232,55 +224,54 @@
     "firstParent = [0, 0 , 1, 1, 0, 1]\n",
     "secondParent = [1, 1, 0, 0, 0, 1]\n",
     "\n",
-    "multiplePointCrossover(firstParent, secondParent)"
+    "offsprings = multiplePointCrossover(firstParent, secondParent)\n",
+    "print(offsprings)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def uniformCrossover(firstParent: list, secondParent: list, maxWeight: int):\n",
     "    firstFitness = calculateFitness(firstParent, maxWeight)\n",
     "    secondFitness = calculateFitness(secondParent, maxWeight)\n",
-    "    print(firstFitness, secondFitness)\n",
     "\n",
+    "    # Probability in the uniform crossover is fp_1 / (fp_1 + fp_2), where fp_1 is the fitness of the first parent and fp_2 is the fitness of the second parent\n",
     "    probability = firstFitness / (firstFitness + secondFitness)\n",
-    "    print(probability)\n",
     "\n",
-    "    firstOffSpring = []\n",
-    "    secondOffSpring = []\n",
+    "    firstOffspring = []\n",
+    "    secondOffspring = []\n",
     "    i = 0\n",
     "\n",
-    "    while (len(firstOffSpring) != len(firstParent)):\n",
+    "    while (len(firstOffspring) != len(firstParent)):\n",
     "        randomProb = random.random()\n",
+    "        # First chromosome have the chance fp_1 / (fp_1 + fp_2) to the get the gene from first parent.\n",
+    "        # If the probability is higher than the random value, first offspring gets the gene from first parent\n",
+    "        # This repeats for all of the genes (length of the chromosome)\n",
     "        if (randomProb < probability):\n",
-    "            firstOffSpring.append(firstParent[i])\n",
-    "            secondOffSpring.append(secondParent[i])\n",
+    "            firstOffspring.append(firstParent[i])\n",
+    "            secondOffspring.append(secondParent[i])\n",
     "        else:\n",
-    "            firstOffSpring.append(secondParent[i])\n",
-    "            secondOffSpring.append(firstParent[i])\n",
+    "            firstOffspring.append(secondParent[i])\n",
+    "            secondOffspring.append(firstParent[i])\n",
     "        i += 1\n",
-    "    \n",
-    "    print(firstOffSpring)\n",
-    "    print(secondOffSpring)\n",
+    "\n",
+    "    return [firstOffspring, secondOffspring]\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "62.519999999999996 44.64\n",
-      "0.5834266517357223\n",
-      "[1, 1, 0, 0, 0, 1]\n",
-      "[0, 0, 1, 1, 0, 1]\n"
+      "[[0, 0, 1, 1, 0, 1], [1, 1, 0, 0, 0, 1]]\n"
      ]
     }
    ],
@@ -288,12 +279,13 @@
     "firstParent = [0, 0 , 1, 1, 0, 1]\n",
     "secondParent = [1, 1, 0, 0, 0, 1]\n",
     "\n",
-    "uniformCrossover(firstParent, secondParent, 1000)"
+    "offsprings = uniformCrossover(firstParent, secondParent, 1000)\n",
+    "print(offsprings)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,6 +294,7 @@
     "def initializePopulation(populationSize: int, chromosomeSize: int):\n",
     "    population = []\n",
     "\n",
+    "    # Randomly generate populationSize amount of chromosomes with chromosomeSize size\n",
     "    for i in range(populationSize):\n",
     "        member = [random.randint(0, 1) for i in range(chromosomeSize)]\n",
     "        population.append(member)\n",
@@ -346,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,14 +347,22 @@
     "    total_fitness = 0\n",
     "    fitnesses = []\n",
     "\n",
+    "    # Add all fitnesses\n",
     "    for i in population:\n",
     "        fitness = calculateFitness(i, maxWeight)\n",
     "        fitnesses.append(fitness)\n",
     "        total_fitness += fitness\n",
     "\n",
+    "    # An individual in the population have fitness / (sum of all fitnesses) chance to be selected in the Roulette Wheel Selection\n",
     "    prob_sum = 0\n",
+    "    # Random float as roulette\n",
     "    roulette = random.uniform(0, total_fitness)\n",
     "    for i in range(len(population)):\n",
+    "        # If the prob_sum + fitness of the individual exceedes the roulette value, the roulette is in that probability area, so the individual is selected\n",
+    "        # Example:\n",
+    "        # If we have 5 individuals with fitness values 5, 10, 15, 6, 3 and roulette as 21, the individual with fitness value 15 should be selected.\n",
+    "        # In the first iteration of the loop prob_sum would be 5, in the second iteration 15 and in the third iteration it would be 30, exceeding the roulette value\n",
+    "        # Third individual from the population would be selected according to this algorithm\n",
     "        prob_sum += fitnesses[i]\n",
     "        if prob_sum > roulette:\n",
     "            return population[i]\n",
